--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNQ6ZmsiCzSC16bStr1KjZNcIBW5hAMa1ek6xoNeSSw5wQouq_N7dQCxlxI02TIeZk1e0&usqp=CAU"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>package.json</title>
+    <title>Playzone</title>
   </head>
   <body>
     <div id="root"></div>
