--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNQ6ZmsiCzSC16bStr1KjZNcIBW5hAMa1ek6xoNeSSw5wQouq_N7dQCxlxI02TIeZk1e0&usqp=CAU"
+      href="https://cdn.vectorstock.com/i/500p/53/43/iqra-muslim-girls-name-naskh-font-arabic-vector-51415343.avif"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Playzone</title>
