--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://cdn.vectorstock.com/i/500p/53/43/iqra-muslim-girls-name-naskh-font-arabic-vector-51415343.avif"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMRM8-ZgTxS-v5PQMmR0lb5hv5TWUTCfb-UZvEMU5LY3s_aQQWPKhCrAJSGf1Yj6nym6U&usqp=CAU"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Playzone</title>
