--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMRM8-ZgTxS-v5PQMmR0lb5hv5TWUTCfb-UZvEMU5LY3s_aQQWPKhCrAJSGf1Yj6nym6U&usqp=CAU"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Use for material icons -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
     <title>Playzone</title>
   </head>
   <body>
